# DojoMan

./: manage.py  pyproject.toml
dojoman/: asgi.py  settings.py  urls.py  wsgi.py
teams/: models.py
teams/management/commands/: generate_fake_data.py
teams/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
